Partial BugFix: reduce horrors of tag line-wrapping
tracks internal commit c61b1364b2b3cc1c2e76a7e8681ad2d01590d5b4

--- a/plugins/Ajax/htdocs/images/tag-ui.css
+++ b/plugins/Ajax/htdocs/images/tag-ui.css
@@ -302,7 +302,6 @@ div.tag-display {
 
 
 .tag-display-set.train {
-	display: inline;
 	margin-right: 1em;
 }
 
